# MIRSU

./: CMakeLists.txt  README.md
include/: ControlObject3D.h  ControlObject3DDiscrete.h
include/blocks/: Step.h  integrator.h
include/util/: csv.hpp
matlab/: 100_hz.csv  25_hz.csv  5_hz.csv  MIRSU.slx  Var6.mlx  cont.csv
source/: ControlObject3D.cpp  ControlObject3DDiscrete.cpp  main.cpp
source/blocks/: gain.cpp  integrator.cpp
